methods.flowerpot.FlowerPot.scala.code
var rouge:Color=Color.RED;
var rose:Color=Color.PINK;
var bleu:Color=Color.CYAN;
var orange:Color=Color.ORANGE;
var vert:Color=Color.GREEN;
var jaune:Color=Color.YELLOW;

growFlowers(){}